                          WebAuth Change History

WebAuth 3.1.0 (in progress)

 *) Add WebAuthWebKdcSSLCertCheck directive to enable/disable checking
    of the WebKDC SSL certificate. Defaults to "on" and should only
    be turned off for debugging/testing purposes.

 *) Added mod_webauthldap for LDAP directory information lookups via
    Kerberos v5 GSS-API binds.

 *) Add new WebAuthDontCache directive which sets r->no_cache. Defaults
    to 0 (allow documents to be cached).

 *) Allow these directives to present in .htaccess files (they were
    previously only allowed in <Directory>/<Location> directives):

    WebAuthExtraRedirect
    WebAuthReturnURL
    WebAuthLoginCanceledURL
    WebAuthVarPrefix

 *) Add more backward compatibility support for WebAuth 2.5 by allowing
    the following directives to appear in .htaccess files:

    StanfordAuthConfirmMsg  -> ignored

    StanfordAuthDoConfirm   -> warns to error_log if set to on

    StanfordAuthDontCache   -> maps to WebAuthDontCache. If AuthType
                               is set to StanfordAuth, defaults to 1.

    StanfordAuthForceReload -> maps to WebAuthExtraRedirect

    StanfordAuthLife        -> maps to WebAuthAppTokenLifetime and enables
                               WebAuthForceLogin

    StanfordAuthReturnURL   -> maps to WebAuthReturnURL

    StanfordAuthGroups      -> unsupported, if specified access is denied
   
 *) Have the WebKDC re-read the token ACL file if its mtime changes.

 *) Added WebAuthAuthType directive to help people transistion to
    mod_webauth.  This directive allows you to specify an additional
    AuthType name that will be treated the same as WebAuth.  If
    this directive is set to StanfordAuth, it will also set two
    extra environment variables: SU_AUTH_USER and SU_AUTH_AGE.

 *) Cleanup environment variable setting. Set environment variables
    (r->subprocess_env) in check_user_id hook instead of waiting